# Deltatron

./: .gitignore  License.txt  ReadMe.adoc
cmake/: CMakeLists.txt  project_info.hh.in
doc/rationale/: conf.py  index.rst
doc/rationale/index/: config.rst  display.rst  introduction.rst
src/: CMakeLists.txt
src/config/: CMakeLists.txt
src/config/include/private/dt/: config_imp.hh
src/config/include/private/dt/config/: command.hh  filesystem.hh
src/config/include/private/dt/config/command/: arg_storage.hh  env_storage.hh  flag_database.hh
src/config/include/public/dt/: config.hh
src/config/include/public/dt/config/command/: flag_id.hh  termflag_passed.hh
src/config/include/public/dt/config/filesystem/: directory.hh
src/config/src/dt/: config.cc
src/deltatron/: CMakeLists.txt
src/deltatron/include/private/dt/: deltatron.hh
src/deltatron/src/dt/: deltatron.cc  main.cc
src/gpu/: CMakeLists.txt
src/gpu/include/private/dt/: gpu_imp.hh
src/gpu/include/private/dt/gpu/: vulkan_instance.hh  vulkan_physical_devices.hh
src/gpu/include/private/dt/gpu/vulkan/: vulkan.hh
src/gpu/include/public/dt/: gpu.hh
src/gpu/src/dt/: gpu.cc
src/json/: CMakeLists.txt
src/json/include/private/dt/: json_imp.hh
src/json/include/private/dt/json/: container_imp.hh  lexer.hh  parser.hh  token.hh  token_stream.hh  verify_stream.hh
src/json/include/private/dt/json/container/: value.hh
src/json/include/private/dt/json/parser/: lexer.hh  semantic_analysis.hh
src/json/include/private/dt/json/token/: stream_lexer.hh  token_stream.hh  verify_token_stream.hh
src/json/include/private/dt/json/token_stream/: stream_lexer.hh  token.hh  verify_stream.hh
src/json/include/public/dt/: json.hh
src/json/include/public/dt/json/: container.hh  error.hh
src/json/include/public/dt/json/container/: type.hh  value.hh
src/json/src/dt/: json.cc
src/json/src/dt/json/: token_stream.cc
src/json/src/dt/json/token/: token_stream.cc
src/system/: CMakeLists.txt
src/system/include/private/dt/: system_imp.hh
src/system/include/private/dt/system/: command.hh  filesystem.hh  os.hh
src/system/include/private/dt/system/command/: arg_view.hh  env_view.hh  flag_database.hh
src/system/include/public/dt/: system.hh
src/system/include/public/dt/system/command/: termflag_passed.hh
src/system/include/public/dt/system/filesystem/: directory.hh
src/system/include/public/dt/system/os/: os_id.hh
src/system/src/dt/: system.cc
src/system/src/dt/system/: filesystem.cc
src/system/src/dt/system/command/: flag_database.cc
src/util/: CMakeLists.txt
src/util/include/dt/util/: ignore.hh  system.hh
