configure_file("project_info.hh.in" "${CMAKE_BINARY_DIR}/cmake_include/dt/cmake/project_info.hh")

add_library(cmake_metatarget INTERFACE)

target_include_directories(cmake_metatarget
  INTERFACE
    "${CMAKE_BINARY_DIR}/cmake_include")

target_compile_options(cmake_metatarget
  INTERFACE
    $<$<CXX_COMPILER_ID:MSVC>:
      "/std:c++latest"
      "/permissive"    # Enforces standards conformance.
      #"/W4"            # All reasonable warnings # Command line warning D9025 : overriding '/W3' with '/W4'
      "/w14242"        # 'identfier': conversion from 'type1' to 'type1', possible loss of data
      "/w14254"        # 'operator': conversion from 'type1:field_bits' to 'type2:field_bits', possible loss of data
      "/w14263"        # 'function': member function does not override any base class virtual member function
      "/w14265"        # 'classname': class has virtual functions, but destructor is not virtual instances of this class may not be destructed correctly
      "/w14287"        # 'operator': unsigned/negative constant mismatch
      "/we4289"        # nonstandard extension used: 'variable': loop control variable declared in the for-loop is used outside the for-loop scope
      "/w14296"        # 'operator': expression is always 'boolean_value'
      "/w14311"        # 'variable': pointer truncation from 'type1' to 'type2'
      "/w14545"        # expression before comma evaluates to a function which is missing an argument list
      "/w14546"        # function call before comma missing argument list
      "/w14547"        # 'operator': operator before comma has no effect; expected operator with side-effect
      "/w14549"        # 'operator': operator before comma has no effect; did you intend 'operator'?
      "/w14555"        # expression has no effect; expected expression with side-effect
      "/w14619"        # pragma warning: there is no warning number 'number'
      "/w14640"        # Enable warning on thread un-safe static member initialization
      "/w14826"        # Conversion from 'type1' to 'type_2' is sign-extended. This may cause unexpected runtime behavior.
      "/w14905"        # wide string literal cast to 'LPSTR'
      "/w14906"        # string literal cast to 'LPWSTR'
      "/w14928"        # illegal copy-initialization; more than one user-defined conversion has been implicitly applied
    >

    $<$<CXX_COMPILER_ID:Clang>:
      "-save-temps"
      "-std=c++20"
      "-Wall"
      "-Wabi"
      "-Wpedantic"
      "-Wdeprecated"
      "-Waddress-of-temporary"
      "-Walloca"
      "-Wanon-enum-enum-conversion"
      "-Warc-repeated-use-of-weak"
      "-Wargument-outside-range"
      "-Warray-bounds-pointer-arithmetic"
      "-Wassign-enum"
      "-Watomic-implicit-seq-cst"
      "-Watomic-properties"
      "-Wauto-import"
      "-Wbad-function-cast"
      "-Wbinary-literal"
      "-Wbind-to-temporary-copy"
      "-Wbitfield-enum-conversion"
      "-Wbitwise-op-parentheses"
      "-Wc++-compat"
      "-Wcast-align"
      "-Wcast-qual"
      "-Wchar-subscripts"
      "-Wclass-varargs"
      "-Wcomplex-component-init"
      "-Wconditional-uninitialized"
      "-Wconsumed"
      "-Wconversion"
      "-Wconversion-null"
      "-Wcovered-switch-default"
      "-Wcpp"
      "-Wcstring-format-directive"
      "-Wctad-maybe-unsupported"
      "-Wcuda-compat"
      "-Wcustom-atomic-properties"
      "-Wdate-time"
      "-Wdeclaration-after-statement"
      "-Wdelete-non-abstract-non-virtual-dtor"
      "-Wdelete-non-virtual-dtor"
      "-Wdeprecated"
      "-Wdeprecated-copy"
      "-Wdeprecated-copy-dtor"
      "-Wdeprecated-dynamic-exception-spec"
      "-Wdeprecated-implementations"
      "-Wdeprecated-this-capture"
      "-Wdeprecated-writable-strings"
      "-Wdirect-ivar-access"
      "-Wdiv-by-zero"
      "-Wdocumentation"
      "-Wdouble-promotion"
      "-Wduplicate-decl-specifier"
      "-Wduplicate-enum"
      "-Wduplicate-method-arg"
      "-Wduplicate-method-match"
      "-Wdynamic-exception-spec"
      "-Weffc++"
      "-Wembedded-directive"
      "-Wempty-init-stmt"
      "-Wempty-translation-unit"
      "-Wendif-labels"
      "-Wenum-compare-conditional"
      "-Wenum-conversion"
      "-Wenum-enum-conversion"
      "-Wenum-float-conversion"
      "-Werror"
      "-Wexit-time-destructors"
      "-Wexpansion-to-defined"
      "-Wexplicit-ownership-type"
      "-Wextra" # "-W"
      "-Wextra-semi"
      "-Wextra-semi-stmt"
      "-Wfixed-enum-extension"
      "-Wflexible-array-extensions"
      "-Wfloat-conversion"
      "-Wfloat-equal"
      "-Wfloat-overflow-conversion"
      "-Wfloat-zero-conversion"
      "-Wformat-non-iso"
      "-Wformat-nonliteral"
      "-Wformat-pedantic"
      "-Wformat-type-confusion"
      "-Wformat=2"
      "-Wfour-char-constants"
      "-Wgcc-compat"
      "-Wglobal-constructors"
      "-Wgnu"
      "-Wheader-hygiene"
      "-Widiomatic-parentheses"
      "-Wignored-qualifiers"
      "-Wimplicit"
      "-Wimplicit-atomic-properties"
      "-Wimplicit-fallthrough"
      "-Wimplicit-fallthrough-per-function"
      "-Wimplicit-float-conversion"
      "-Wimplicit-function-declaration"
      "-Wimplicit-int-conversion"
      "-Wimplicit-int-float-conversion"
      "-Wimplicit-retain-self"
      "-Wimport-preprocessor-directive-pedantic"
      "-Wincomplete-module"
      "-Winconsistent-missing-destructor-override"
      "-Winfinite-recursion"
      "-Wint-in-bool-context"
      "-Winvalid-or-nonexistent-directory"
      "-Wkeyword-macro"
      "-Wlanguage-extension-token"
      "-Wlogical-op-parentheses"
      "-Wloop-analysis"
      "-Wmain"
      "-Wmethod-signatures"
      "-Wmicrosoft"
      "-Wmicrosoft-anon-tag"
      "-Wmicrosoft-charize"
      "-Wmicrosoft-comment-paste"
      "-Wmicrosoft-cpp-macro"
      "-Wmicrosoft-end-of-file"
      "-Wmicrosoft-enum-value"
      "-Wmicrosoft-exception-spec"
      "-Wmicrosoft-fixed-enum"
      "-Wmicrosoft-flexible-array"
      "-Wmicrosoft-redeclare-static"
      "-Wmisexpect"
      "-Wmisleading-indentation"
      "-Wmismatched-tags"
      "-Wmissing-braces"
      "-Wmissing-field-initializers"
      "-Wmissing-method-return-type"
      "-Wmissing-noreturn"
      "-Wmissing-prototypes"
      "-Wmissing-variable-declarations"
      "-Wmodule-file-config-mismatch"
      "-Wmost"
      "-Wmove"
      "-Wnarrowing"
      "-Wnested-anon-types"
      "-Wnested-externs"
      "-Wnewline-eof"
      "-Wnoderef"
      "-Wnoexcept-type"
      "-Wnon-gcc"
      "-Wnon-modular-include-in-framework-module"
      "-Wnon-modular-include-in-module"
      "-Wnon-virtual-dtor"
      "-Wnonportable-system-include-path"
      "-Wnull-pointer-arithmetic"
      "-Wnullability-declspec"
      "-Wnullability-extension"
      "-Wnullable-to-nonnull-conversion"
      "-Wold-style-cast"
      "-Wopenmp"
      "-Wover-aligned"
      "-Woverlength-strings"
      "-Woverloaded-virtual"
      "-Woverride-init"
      "-Woverriding-method-mismatch"
      "-Wpacked"
      "-Wpadded"
      "-Wparentheses"
      "-Wpartial-availability"
      "-Wpedantic"
      "-Wpedantic-core-features"
      "-Wpessimizing-move"
      "-Wpointer-arith"
      "-Wpragma-pack"
      "-Wpragma-pack-suspicious-include"
      "-Wpragmas"
      "-Wprivate-header"
      "-Wprofile-instr-missing"
      "-Wquoted-include-in-framework-header"
      "-Wrange-loop-analysis"
      "-Wrange-loop-bind-reference"
      "-Wrange-loop-construct"
      "-Wreceiver-forward-class"
      "-Wredundant-move"
      "-Wredundant-parens"
      "-Wreorder"
      "-Wreserved-id-macro"
      "-Wreserved-user-defined-literal"
      "-Wretained-language-linkage"
      "-Wreturn-std-move"
      "-Wreturn-std-move-in-c++11"
      "-Wselector"
      "-Wself-assign"
      "-Wself-move"
      "-Wsemicolon-before-method-body"
      "-Wshadow"
      "-Wshadow-all"
      "-Wshadow-field"
      "-Wshadow-field-in-constructor"
      "-Wshadow-uncaptured-local"
      "-Wshift-sign-overflow"
      "-Wshorten-64-to-32"
      "-Wsign-compare"
      "-Wsign-conversion"
      "-Wsigned-enum-bitfield"
      "-Wsometimes-uninitialized"
      "-Wsource-uses-openmp"
      "-Wspir-compat"
      "-Wstatic-in-inline"
      "-Wstrict-prototypes"
      "-Wstrict-selector-match"
      "-Wstring-conversion"
      "-Wsuper-class-method-mismatch"
      "-Wtautological-compare"
      "-Wthread-safety"
      "-Wthread-safety-analysis"
      "-Wthread-safety-attributes"
      "-Wthread-safety-beta"
      "-Wthread-safety-negative"
      "-Wthread-safety-precise"
      "-Wthread-safety-reference"
      "-Wthread-safety-verbose"
      "-Wtype-limits"
      "-Wundeclared-selector"
      "-Wundef"
      "-Wundefined-func-template"
      "-Wundefined-internal-type"
      "-Wundefined-reinterpret-cast"
      "-Wunguarded-availability"
      "-Wuninitialized"
      "-Wunknown-pragmas"
      "-Wunnamed-type-template-args"
      "-Wunneeded-internal-declaration"
      "-Wunneeded-member-function"
      "-Wunreachable-code-aggressive"
      "-Wunreachable-code-loop-increment"
      "-Wunsupported-dll-base-class-template"
      "-Wunused"
      "-Wunused-const-variable"
      "-Wunused-exception-parameter"
      "-Wvariadic-macros"
      "-Wvector-conversion"
      "-Wvla"
      "-Wvla-extension"
      "-Wweak-template-vtables"
      "-Wweak-vtables"
      "-Wwrite-strings"
      "-Wzero-as-null-pointer-constant"
      "-Wzero-length-array">)
